# a2a-samples

./: CLAUDE.md  DEMO_GUIDE_JP.md  README.md
samples/python/: pyproject.toml
samples/python/agents/crewai/: pyproject.toml
samples/python/agents/google_adk/: pyproject.toml
samples/python/hosts/multiagent/: agent.py
