[project]
name = "a2a-samples"
version = "0.1.0"
description = "Agent2Agent samples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "hosts"]

[tool.uv.workspace]
members = [
    "agents/google_adk",
    "agents/marvin",
    "hosts/cli",
    "hosts/cli_auth",
    "hosts/extended_agent_card_cli",
    "hosts/multiagent",
    "agents/airbnb_planner_multiagent",
    "agents/llama_index_file_chat",
    "agents/semantickernel",
    "agents/mindsdb",
    "agents/extended_agent_card_adk",
    "agents/veo_video_gen",
    "agents/dice_agent_grpc",
    "agents/ag2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-mock>=3.14.0", "ruff>=0.11.2"]
